--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss",
+              "src/global.scss"
+            ],
             "scripts": [],
             "aot": false,
             "vendorChunk": true,
@@ -166,11 +169,22 @@
               "devServerTarget": "app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "app:build:production",
+            "firebaseProject": "tasks-55135",
+            "firebaseHostingSite": "tasks-55135"
+          }
         }
       }
     }
   },
   "cli": {
+    "analytics": "9172abaf-de3b-4f7f-a025-8af49f504ba4",
     "defaultCollection": "@ionic/angular-toolkit"
   },
   "schematics": {
